  - "save" can append to or replace an existing playlist
  - filter "prio" (for "playlistfind"/"playlistsearch")
  - limit "player" idle events to the current partition
  - operator "starts_with"
  - show PCRE support in "config" response
  - apply Unicode normalization to case-insensitive filter expressions
  - stickers on playlists and some tag types
  - new command "stickernames"
* database
  - attribute "added" shows when each song was added to the database
  - proxy: require MPD 0.21 or later
  - proxy: require libmpdclient 2.15 or later
* archive
  - add option to disable archive plugins in mpd.conf
* storage
  - curl: optimize database update
* input
  - curl: add "connect_timeout" configuration
* decoder
  - ffmpeg: require FFmpeg 4.0 or later
  - ffmpeg: query supported demuxers at runtime
  - hybrid_dsd: remove
  - opus: implement bitrate calculation
  - sidplay: require libsidplayfp (drop support for the original sidplay)
  - wavpack: require libwavpack version 5
* resampler
  - soxr: require libsoxr 0.1.2 or later
* player
  - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
  - "one-shot" consume mode
* tags
  - new tags "TitleSort", "Mood"
* output
  - add option "always_off"
  - alsa: require alsa-lib 1.1 or later
  - pipewire: map tags "Date" and "Comment"
* switch to C++20
  - GCC 10 or clang 11 (or newer) recommended
* static partition configuration
* Windows
  - build with libsamplerate
  - remove JACK DLL support
* remove Haiku support
* remove Boost dependency
* require libfmt 7 or later

ver 0.23.14 (2023/10/08)
* decoder
  - flac: fix scanning files with non-ASCII names on Windows
  - mad: fix calculation of LAME peak values
* mixer
  - wasapi: fix problem setting volume
* more libfmt 10 fixes
* fix auto-detected systemd unit directory
* Android
  - require Android 7 or newer

ver 0.23.13 (2023/05/22)
* input
  - curl: fix busy loop after connection failed
  - curl: hide "404" log messages for non-existent ".mpdignore" files