@@ -1462,15 +1462,17 @@ the database for songs).
 
 .. _command_sticker_find:
 
-:command:`sticker find {TYPE} {URI} {NAME}`
+:command:`sticker find {TYPE} {URI} {NAME} [sort {SORTTYPE}] [window {START:END}]`
     Searches the sticker database for stickers with the
     specified name, below the specified directory (URI).
     For each matching song, it prints the URI and that one
     sticker's value.
 
+    ``sort`` sorts the result by "``uri``" or "``value``". [#since_0_24]_
+
 .. _command_sticker_find_value:
 
-:command:`sticker find {TYPE} {URI} {NAME} = {VALUE}`
+:command:`sticker find {TYPE} {URI} {NAME} = {VALUE} [sort {SORTTYPE}] [window {START:END}]`
     Searches for stickers with the given value.
 
     Other supported operators are:
